--- a/index.html
+++ b/index.html
@@ -9,19 +9,30 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   </head>
   <body>
-    <header>
-      <!-- logo -->
-      <div id="logo">
-        <h1>Exceptional</h1>
-        <h2>Realty Group</h2>
-      <div>
+  
+  <div id="social">
+    <a href="#">Twitter</a>
+    <a href="#">Facebook</a>
+    <a href="#">Google Plus</a>
+  </div>
 
-      <nav>
-        <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
-      </nav>
+    <header>
+    <div class="wrapper clearfix">
+        <!-- logo -->
+        <div id="logo">
+          <h1>Exceptional</h1>
+          <h2>Realty Group</h2>
+        </div>
+        <div>
+
+        <nav>
+          <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+        </nav>
+    </div>
     </header>
 
-    <section id="featured-property">
+  <div class="wrapper clearfix">
+    <section id="featured-property" class="col-3">
       <figure>
         <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
         <figcaption>345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY - Photo by Denise Richards.</figcaption>
@@ -31,7 +42,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
     </section>
 
-    <section id="promotional">
+    <section id="promotional" class="col-2 first">
       <figure>
         <video controls>
           <source src="videos/real-estate.mp4" type="video/mp4"> 
@@ -41,7 +52,9 @@
         <figcaption>Exceptional Realty Group Promotional Video - Source: archive.org</figcaption>
       </figure>
     </section>
+  </div>
 
+  <div class="wrapper clearfix" class="col-1 first">
     <section id="details">
       <div>
         <h3>Contact</h3>
@@ -57,7 +70,7 @@
         </address>
       </div>
 
-      <div>
+      <div class="col-1">
         <h3>Links</h3>
         <p>
           <a href="#" target="_blank">Home Restoration</a><br>
@@ -66,7 +79,7 @@
         </p>
       </div>
 
-      <div>
+      <div class="col-1">
         <h3>Follow</h3>
         <p>
           <a href="#" target="_blank">Youtube</a><br>
@@ -75,6 +88,7 @@
         </p>
       </div>
     </section>
+  </div>
 
     <footer>
       &copy; 2014 Exceptional Realty. All Rights Reserved.
